--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
                 </div>
             </div>
 
-    <section id="interativo">
+    <section id="simulador" class="mt-5 p-4 bg-light rounded-3">
+            <h2 class="text-center mb-4">Simulador de Consumo Consciente</h2>
+            <form id="form-simulador">
+            </form>
+            <div id="resultado" class="mt-4 p-3 text-center fw-bold fs-5"></div>
+        </section>
+    </main>
 
     <!---Footer--->
 
