--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p class="lead"></p>
         <h1>Formação para o Futuro</h1>
         <br>
+        <img src="/img/imagem.png" />
         <br>
         <br>
          <h2>Construindo Valores e Conhecimento para o Amanhã:</h2>
